--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" href=src/assets/favicon.ico" type=image/x-icon">
   <link rel=icon" href="src/assets/favicon.ico" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css?family-Ubuntu" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
   <title>Vue.js Todo</title>
 </head>
 <body>
